feat: kramdown mathjax 마크다운 수식 기능 추가

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,16 @@ script_includes:
 
 {% include toc-status.html %}
 
+<!-- MathJax configuration for inline/block math rendering -->
+<script>
+  MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']]
+    }
+  };
+</script>
+<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 <article class="px-1" data-toc="{{ enable_toc }}">
   <header>
     <h1 data-toc-skip>{{ page.title }}</h1>
